--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
-  height: 100vh;
+  height: 100dvh;
   background-color: var(--background-color);
   position: relative;
   flex: 1;
