--- a/client/src/pages/FiftyGram/FiftyGram.module.scss
+++ b/client/src/pages/FiftyGram/FiftyGram.module.scss
@@ -13,8 +13,8 @@
     overflow: hidden;
 
     .chatContainer {
-      height: 100vh;
-      max-height: 100vh;
+      height: 100dvh;
+      max-height: 100dvh;
       overflow: hidden;
       flex-direction: column;
       flex: 3;
@@ -30,8 +30,8 @@
       justify-content: center;
       align-items: center;
       // width: 100%;
-      height: 100vh;
-      max-height: 100vh;
+      height: 100dvh;
+      max-height: 100dvh;
       overflow: hidden;
       flex: 2;
     }
